# msd-mcp

./: CMakeLists.txt  MPC.hpp  main.cpp  readme.md  setup_env.sh
include/: MPC.hpp  utils.hpp
test/: mpc_test.cpp  simulation_test.cpp  three_dof_sim_test.cpp
